--- a/css/style.css
+++ b/css/style.css
@@ -14,38 +14,42 @@ body header {
     color: white;
     font-family: 'Press Start 2P', cursive;
     font-size: 2em; }
-  body header .contact #mydiv {
-    position: absolute;
-    z-index: 9;
-    background-color: rgba(207, 57, 143, 0.6);
-    border: 1px solid #d3d3d3;
-    text-align: center;
-    color: #fff;
-    animation: light 5s infinite;
-    font-family: 'Orbitron', sans-serif;
-    font-weight: bold; }
-    body header .contact #mydiv li {
-      list-style-type: none;
-      margin-left: -33px;
-      padding: 10px;
-      font-weight: normal; }
-    body header .contact #mydiv #mydivheader {
-      padding: 10px;
-      cursor: move;
-      z-index: 10;
-      background-color: rgba(207, 57, 143, 0.6);
-      color: #fff; }
+  body header .contact {
+    position: fixed;
+    z-index: 80; }
+    body header .contact #mydiv {
+      position: absolute;
+      z-index: 9;
+      width: 205px;
+      background-color: rgba(57, 133, 207, 0.6);
+      border: 1px solid #d3d3d3;
+      text-align: center;
+      color: #fff;
+      animation: light 5s infinite;
+      font-family: 'Orbitron', sans-serif;
+      font-weight: bold; }
+      body header .contact #mydiv li {
+        list-style-type: none;
+        margin-left: -33px;
+        padding: 10px;
+        font-weight: normal; }
+      body header .contact #mydiv #mydivheader {
+        padding: 10px;
+        cursor: move;
+        z-index: 10;
+        background-color: rgba(57, 133, 207, 0.6);
+        color: #fff; }
 @keyframes light {
   0% {
-    box-shadow: 0px 0px 0px 0px red; }
+    box-shadow: 0px 0px 0px 0px blue; }
   50% {
-    box-shadow: 0px 0px 30px 10px rgba(207, 57, 143, 0.6); }
+    box-shadow: 0px 0px 30px 10px #88b6e2; }
   100% {
-    box-shadow: 0px 0px 0px 0px red; } }
+    box-shadow: 0px 0px 0px 0px blue; } }
 body #navbar {
   width: 100%;
   height: 100px;
-  background-color: rgba(207, 57, 143, 0.6);
+  background-color: rgba(57, 133, 207, 0.6);
   transition: all 0.3s ease; }
   body #navbar #menu-center {
     margin: 0 auto; }
@@ -80,16 +84,16 @@ body section h2 {
 body section #skills .Title button {
   border-radius: 50%;
   border: 0px;
-  background-color: #e288bc;
+  background-color: #88b6e2;
   animation: light 5s infinite;
   cursor: pointer; }
 @keyframes light {
   0% {
-    box-shadow: 0px 0px 0px 0px red; }
+    box-shadow: 0px 0px 0px 0px blue; }
   50% {
-    box-shadow: 0px 0px 30px 10px rgba(207, 57, 143, 0.6); }
+    box-shadow: 0px 0px 30px 10px #88b6e2; }
   100% {
-    box-shadow: 0px 0px 0px 0px red; } }
+    box-shadow: 0px 0px 0px 0px blue; } }
 body section #skills #hide {
   padding: 16px;
   margin-bottom: 10px;
@@ -98,7 +102,7 @@ body section #skills #hide {
   transition: .6s ease opacity,.6s ease transform; }
 body section #skills .myProgress {
   width: 100%;
-  background-color: rgba(207, 57, 143, 0.6); }
+  background-color: rgba(57, 133, 207, 0.6); }
   body section #skills .myProgress .level {
     background: linear-gradient(#fa4228, #bb34bd);
     width: 0%;
@@ -111,6 +115,8 @@ body section .education .bufferzone {
   height: 200px; }
 body section .education #education .subDetails {
   font-weight: bold; }
+body section #hobbies .line {
+  border: 2px solid black; }
 body section .projects .outdoor a {
   text-decoration: none; }
   body section .projects .outdoor a h5 {
@@ -123,7 +129,7 @@ body section .projects .outdoor a {
 body section .carousel-container {
   max-width: 1510px; }
   body section .carousel-container .carousel {
-    background-color: #e288bc;
+    background-color: #88b6e2;
     box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.125);
     height: 200px;
     margin: auto;
