--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,12 +23,16 @@ body {
 
     .contact {
       // left: 90%;
+      position: fixed;
+      z-index: 80;
 
 
       #mydiv {
         position: absolute;
         z-index: 9;
-        background-color: rgba(207, 57, 143, 0.6);
+        width: 205px;
+        // background-color: rgba(207, 57, 143, 0.6);
+        background-color: rgba(57, 133, 207, 0.6);
         border: 1px solid #d3d3d3;
         text-align: center;
         color: #fff;
@@ -46,20 +50,21 @@ body {
             padding: 10px;
             cursor: move;
             z-index: 10;
-            background-color: rgba(207, 57, 143, 0.6);
+            // background-color: rgba(207, 57, 143, 0.6);
+            background-color: rgba(57, 133, 207, 0.6);
             color: #fff;
         }
 
 
         @keyframes light {
           0% {
-             box-shadow: 0px 0px 0px 0px red;
+             box-shadow: 0px 0px 0px 0px blue;
            }
           50% {
-            box-shadow: 0px 0px 30px 10px rgba(207, 57, 143, 0.6);
+            box-shadow: 0px 0px 30px 10px #88b6e2;
           }
           100% {
-             box-shadow: 0px 0px 0px 0px red;
+             box-shadow: 0px 0px 0px 0px blue;
            }
         }
       }
@@ -72,7 +77,8 @@ body {
   #navbar {
     width: 100%;
     height: 100px;
-    background-color: rgba(207, 57, 143, 0.6);
+    // background-color: rgba(207, 57, 143, 0.6);
+    background-color: rgba(57, 133, 207, 0.6);
     transition: all 0.3s ease;
 
     // nav content
@@ -132,20 +138,21 @@ body {
         button {
           border-radius: 50%;
           border: 0px;
-          background-color: #e288bc;
+          // background-color: #e288bc;
+          background-color: #88b6e2;
           animation: light 5s infinite;
           cursor: pointer;
         }
 
         @keyframes light {
           0% {
-             box-shadow: 0px 0px 0px 0px red;
+             box-shadow: 0px 0px 0px 0px blue;
            }
           50% {
-            box-shadow: 0px 0px 30px 10px rgba(207, 57, 143, 0.6);
+            box-shadow: 0px 0px 30px 10px #88b6e2;
           }
           100% {
-             box-shadow: 0px 0px 0px 0px red;
+             box-shadow: 0px 0px 0px 0px blue;
            }
         }
       }
@@ -161,7 +168,8 @@ body {
       .myProgress {
         width: 100%;
         // background-color: #ddd;
-        background-color: rgba(207, 57, 143, 0.6);
+        // background-color: rgba(207, 57, 143, 0.6);
+        background-color: rgba(57, 133, 207, 0.6);
 
         .level {
           background: linear-gradient(#fa4228, #bb34bd);
@@ -191,7 +199,9 @@ body {
     }
 
     #hobbies {
-
+      .line {
+        border: 2px solid black;
+      }
     }
     .projects {
       .outdoor {
@@ -212,7 +222,8 @@ body {
     .carousel-container {
       max-width: 1510px;
       .carousel {
-        background-color: #e288bc;
+        // background-color: #e288bc;
+        background-color: #88b6e2;
         box-shadow: 0 10px 20px -5px rgba(0, 0, 0, .125);
         height: 200px;
         margin: auto;
