--- a/scss/style.scss
+++ b/scss/style.scss
@@ -172,7 +172,7 @@ body {
         background-color: rgba(57, 133, 207, 0.6);
 
         .level {
-          background: linear-gradient(#fa4228, #bb34bd);
+          background: linear-gradient(#88b6e2, #bb34bd);
           width: 0%;
           height: 30px;
         }
