--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ body section #skills .myProgress {
   width: 100%;
   background-color: rgba(57, 133, 207, 0.6); }
   body section #skills .myProgress .level {
-    background: linear-gradient(#fa4228, #bb34bd);
+    background: linear-gradient(#88b6e2, #bb34bd);
     width: 0%;
     height: 30px; }
 body section .education .bufferzone {
